chat-app/kubernetes/chat-app.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
  namespace: chat-app
spec:
  selector:
    app: chat-app
  ports:
    - port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: chat-app
  replicas: 2
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
        - name: chat-app
          image: metaph3r/chat-app:latest
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
