chat-app/kubernetes/redis-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: chat-app
spec:
  selector:
    app: redis
  externalName: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.6-alpine3.14
        ports:
        - containerPort: 6379
          name: http
