chat-app/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app
  namespace: chat-app
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - chatapp.f8e79c5a2c0d44f18aff.germanywestcentral.aksapp.io
      secretName: chat-app-tls
  rules:
    - host: chatapp.f8e79c5a2c0d44f18aff.germanywestcentral.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app
                port:
                  number: 8080
